Added tasks and variables

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,22 @@
 ---
 # defaults file for Ansible-Docker-Elasticsearch
+DOCKER_ELASTICSEARCH_VERSION: ""
+DOCKER_ELASTICSEARCH_IMAGE: "docker.elastic.co/elasticsearch/elasticsearch:{{ DOCKER_ELASTICSEARCH_VERSION }}"
+DOCKER_ELASTICSEARCH_CONTAINER_NAME: "elasticsearch"
+DOCKER_ELASTICSEARCH_RESTART_POLICY: "unless-stopped"
+DOCKER_CREATE_ELASTICSEARCH_DATA_VOLUME: True
+DOCKER_ELASTICSEARCH_VOLUME_NAME: "elasticsearch_data"
+# Example DOCKER_ELASTICSEARCH_VOLUME_MAPPING
+# DOCKER_ELASTICSEARCH_VOLUME_MAPPING:
+#   - "{{ DOCKER_ELASTICSEARCH_VOLUME_NAME }}:/usr/share/elasticsearch/data"
+DOCKER_ELASTICSEARCH_VOLUME_MAPPING: []
+DOCKER_ELASTICSEARCH_EXPOSE_PORTS: False
+# Example DOCKER_ELASTICSEARCH_PORT_MAPPING
+# DOCKER_ELASTICSEARCH_PORT_MAPPING:
+#   - "9200:9200"
+#   - "9300:9300"
+DOCKER_ELASTICSEARCH_PORT_MAPPING: []
+# Example DOCKER_ELASTICSEARCH_ENVIRONMENT
+# DOCKER_ELASTICSEARCH_ENVIRONMENT:
+#   - { cluster.name: "EXAMPLE", discovery.type: "single-node", ES_JAVA_OPTS: "-Xms2g -Xmx2g" }
+DOCKER_ELASTICSEARCH_ENVIRONMENT: []
