Added network name while creating container

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,3 +20,4 @@ DOCKER_ELASTICSEARCH_PORT_MAPPING: []
 # DOCKER_ELASTICSEARCH_ENVIRONMENT:
 #   - { cluster.name: "EXAMPLE", discovery.type: "single-node", ES_JAVA_OPTS: "-Xms2g -Xmx2g" }
 DOCKER_ELASTICSEARCH_ENVIRONMENT: []
+DOCKER_ELASTICSEARCH_NETWORK_NAME: "default"
